Creacion de logica para crear y administrar comentarios
